<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mapero</string>
    <string name="scanning">Escaneando… %1$d AP</string>
    <string name="no_wifi">Habilita el WiFi para escanear</string>
    <string name="gps_waiting">Esperando GPS… (%1$d AP detectados)</string>
    <string name="stopped">Detenido</string>
    <string name="follow_on">Seguir: ON</string>
    <string name="center">Centrar</string>
    <string name="stream_on">Streaming: ON</string>
    <string name="stream_off">Streaming: OFF</string>
    <string name="follow_off">Seguir: OFF</string>
    <string name="start">Iniciar mapeo</string>
    <string name="stop">Detener</string>

    <string-array name="filter_type">
        <item>Todas</item>
        <item>Abiertas</item>
        <item>Protegidas</item>
        <item>Sin datos</item>
    </string-array>
    <string-array name="filter_band">
        <item>Todas</item>
        <item>2,4 GHz</item>
        <item>5 GHz</item>
        <item>6 GHz</item>
    </string-array>
    <string-array name="filter_signal">
        <item>Todas</item>
        <item>&gt;= -80 dBm</item>
        <item>&gt;= -70 dBm</item>
        <item>&gt;= -60 dBm</item>
    </string-array>
</resources>
